// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action_PATHLESS 1`] = `
Object {
  "type": "PATHLESS",
}
`;

exports[`history_entries_PATHLESS 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/redirected",
    "search": "",
    "state": Object {},
    "url": "/redirected",
  },
]
`;

exports[`history_index_PATHLESS 1`] = `1`;

exports[`options 1`] = `Object {}`;

exports[`response_PATHLESS 1`] = `
Object {
  "type": "PATHLESS",
}
`;

exports[`state_PATHLESS 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected",
        "search": "",
        "state": Object {},
        "url": "/redirected",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/redirected",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "REDIRECTED",
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE_\\"redirect_complete\\"",
}
`;

exports[`thunk_PATHLESS 1`] = `1`;

exports[`title_PATHLESS 1`] = `"REDIRECTED"`;
